見積もりページラベル修正

--- a/src/estimate.html
+++ b/src/estimate.html
@@ -460,7 +460,7 @@
                             <input type="checkbox" id="narrow"><label for="narrow">道幅が狭い</label><br>
                             <input type="checkbox" id="tower"><label for="tower">タワーマンション</label>
                             <input type="checkbox" id="newBuilding"><label for="newBuilding">新築</label><br class="tb-br sp-br">
-                            <input type="checkbox" id="detachedKitchen"><label for="etachedKitchen">一戸建てキッチンが２階以上</label>
+                            <input type="checkbox" id="detachedKitchen"><label for="detachedKitchen">一戸建てキッチンが２階以上</label>
                             <span class="red">複数選択可</span>
                         </div>
                     </div>
@@ -574,7 +574,7 @@
                             <input type="checkbox" id="narrow2"><label for="narrow2">道幅が狭い</label><br>
                             <input type="checkbox" id="tower2"><label for="tower2">タワーマンション</label>
                             <input type="checkbox" id="newBuilding2"><label for="newBuilding2">新築</label><br class="tb-br">
-                            <input type="checkbox" id="detachedKitchen2"><label for="etachedKitchen2">一戸建てキッチンが２階以上</label>
+                            <input type="checkbox" id="detachedKitchen2"><label for="detachedKitchen2">一戸建てキッチンが２階以上</label>
                             <span class="red">複数選択可</span>
                         </div>
                     </div>
