リンク修正

--- a/src/news.html
+++ b/src/news.html
@@ -259,13 +259,13 @@
                     <div class="footerNav__column1">
                         <div class="footerNav spHide">
                             <ul class="footerNav__list">
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">HOME</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">会社概要</a></li>
+                                <li class="footerNav__list--item"><a href="./index.html"><img src="./assets/images/triangle_right.svg" alt="">HOME</a></li>
+                                <li class="footerNav__list--item"><a href="./about.html"><img src="./assets/images/triangle_right.svg" alt="">会社概要</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">プライバシーポリシー</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">お知らせ</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
+                                <li class="footerNav__list--item"><a href="./news.html"><img src="./assets/images/triangle_right.svg" alt="">お知らせ</a></li>
+                                <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
+                                <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">オンラインショップ</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
