フォント・リンク修正

--- a/src/about.html
+++ b/src/about.html
@@ -109,7 +109,7 @@
                             </a>
                         </li>
                         <li class="menu__item menu__item6">
-                            <a href="/index.html">
+                            <a href="https://tmc4514.com/shop/">
                                 <p class="menu__item--subTitle">ONLINE STORE</p>
                                 <p class="menu__item--title">オンラインストア</p>
                             </a>
@@ -300,7 +300,7 @@
                     </div>
                     <p class="message__content--text">メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。
                         <br><br>メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。</p>
-                    <p class="message__content--name"><span>代表</span><span class="large">高倉　弘樹</span><span>KOUKI TAKAKURA</span></p>
+                    <p class="message__content--name"><span>代表</span><span class="large">高倉　弘樹</span><span class="small">KOUKI TAKAKURA</span></p>
                 </div>
             </div>
         </section>
@@ -451,7 +451,7 @@
                                 <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">オンラインショップ</a></li>
+                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
