--- a/src/estimate.html
+++ b/src/estimate.html
@@ -99,7 +99,7 @@
                             </a>
                         </li>
                         <li class="menu__item menu__item6">
-                            <a href="/index.html">
+                            <a href="https://tmc4514.com/shop/">
                                 <p class="menu__item--subTitle">ONLINE STORE</p>
                                 <p class="menu__item--title">オンラインストア</p>
                             </a>
@@ -347,7 +347,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label">
-                        <label for="name">携帯番号<span class="asterisk">※</span></label>
+                        <label for="name">携帯番号</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content"><input type="tel" class="form__input" placeholder="000-0000-0000"></div>
@@ -436,7 +436,7 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label">
-                        <label for="name">写真アップロード（間取り写真）</label>
+                        <label for="name">写真アップロード<br class="tb2-br">（間取り写真）</label>
                     </div>
                     <div class="form__area form__area--column">
                         <div class="form__content"><input
@@ -470,7 +470,25 @@
                         <label for="name">現住所の間取り</label>
                     </div>
                     <div class="form__area form__area--column">
-                        <div class="form__content"><div class="select__wrap"><select class="form__input"></select></div></div>
+                        <div class="form__content">
+                            <div class="select__wrap">
+                                <select class="form__input">
+                                    <option value=""></option>
+                                    <option value="1R">1R</option>
+                                    <option value="1K">1K</option>
+                                    <option value="1DK">1DK</option>
+                                    <option value="1LDK">1LDK</option>
+                                    <option value="2K">2K</option>
+                                    <option value="2DK">2DK</option>
+                                    <option value="2LDK">2LDK</option>
+                                    <option value="3DK">3DK</option>
+                                    <option value="3LDK">3LDK</option>
+                                    <option value="4DK">4DK</option>
+                                    <option value="4LDK">4LDK</option>
+                                    <option value="other">その他</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form__item">
@@ -478,7 +496,19 @@
                         <label for="name">お引越しされる人数</label>
                     </div>
                     <div class="form__area form__area--column">
-                        <div class="form__content"><div class="select__wrap"><select class="form__input"></select></div></div>
+                        <div class="form__content">
+                            <div class="select__wrap">
+                                <select class="form__input">
+                                    <option value=""></option>
+                                    <option value="1">1人</option>
+                                    <option value="2">2人</option>
+                                    <option value="3">3人</option>
+                                    <option value="4">4人</option>
+                                    <option value="5">5人</option>
+                                    <option value="more">6人以上</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form__item adress__item">
@@ -587,8 +617,19 @@
                         <div class="form__content">
                             <div class="select__wrap">
                                 <select class="form__input">
-                                    <!-- <option value="type1">aaa</option>
-                                    <option value="type2">bbb</option> -->
+                                    <option value=""></option>
+                                    <option value="1R">1R</option>
+                                    <option value="1K">1K</option>
+                                    <option value="1DK">1DK</option>
+                                    <option value="1LDK">1LDK</option>
+                                    <option value="2K">2K</option>
+                                    <option value="2DK">2DK</option>
+                                    <option value="2LDK">2LDK</option>
+                                    <option value="3DK">3DK</option>
+                                    <option value="3LDK">3LDK</option>
+                                    <option value="4DK">4DK</option>
+                                    <option value="4LDK">4LDK</option>
+                                    <option value="other">その他</option>
                                 </select>
                             </div>
                         </div>
@@ -628,10 +669,10 @@
                 </div>
                 <div class="form__item">
                     <div class="form__label">
-                        <label for="name">その他お荷物があればご入力ください</label>
+                        <label for="name">その他お荷物があれば<br class="tb2-br">ご入力ください</label>
                     </div>
                     <div class="form__area form__area--column">
-                        <div class="form__content">例）楽器・水槽など</div>
+                        <div class="form__content margin__top--10">例）楽器・水槽など</div>
                         <div class="textarea__content"><textarea name="others" id="otherBaggage" rows="4" placeholder="こちらにご入力ください。"></textarea></div> 
                     </div>
                 </div>
@@ -741,7 +782,7 @@
                                 <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">オンラインショップ</a></li>
+                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
