--- a/src/news.html
+++ b/src/news.html
@@ -99,7 +99,7 @@
                             </a>
                         </li>
                         <li class="menu__item menu__item6">
-                            <a href="/index.html">
+                            <a href="https://tmc4514.com/shop/">
                                 <p class="menu__item--subTitle">ONLINE STORE</p>
                                 <p class="menu__item--title">オンラインストア</p>
                             </a>
@@ -164,32 +164,26 @@
                         <tr>
                             <th>23.12.25<button>Information</button></th>
                             <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
-                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
                             <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
-                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
                             <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
-                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
                             <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
-                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
                             <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
-                            <td></a></td>
                         </tr>
                         <tr>
                             <th>23.12.25<button>Information</button></th>
                             <td><a href="./single.html">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</a></td>
-                            <td></a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -266,7 +260,7 @@
                                 <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">オンラインショップ</a></li>
+                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
