リンク修正

--- a/src/characters.html
+++ b/src/characters.html
@@ -480,7 +480,7 @@
                 </div>
             </div>
             <div class="lineBtn__wrap">
-                <div class="lineBtn"><a href="">公式LINEスタンプ販売中！</a><img src="./assets/images/characters/lineBtn_chara.svg" d alt=""></div>
+                <div class="lineBtn"><a href="https://store.line.me/stickershop/author/45105/ja" target="_blank">公式LINEスタンプ販売中！</a><img src="./assets/images/characters/lineBtn_chara.svg" d alt=""></div>
             </div>
         </section>
         <section class="service__message lower__message">
