--- a/src/index.html
+++ b/src/index.html
@@ -514,7 +514,7 @@
                 </div>
             </div>
             <div class="more__btn--container">
-                <a class="more__btn" href="#">すべて見る</a>
+                <a class="more__btn" href="https://tmc4514.com/shop/">すべて見る</a>
             </div>
             <div class="online__sale--img">
                 <img src="./assets/images/top/online/img-online_sale.svg" alt="" />
