ページネーション機能追加

--- a/src/estimate.html
+++ b/src/estimate.html
@@ -187,7 +187,7 @@
             </p>
             <div class="form__field">
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">お名前<span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--row">
@@ -196,7 +196,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">ふりがな<span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--row">
@@ -205,7 +205,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">お引越し希望日（第一希望）</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -267,7 +267,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">お引越し希望日（第二希望）</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <div class="form__item mail__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">メールアドレス<span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--column">
@@ -338,7 +338,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">電話番号<span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--column">
@@ -346,7 +346,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">携帯番号</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -354,7 +354,7 @@
                     </div>
                 </div>
                 <div class="form__item adress__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">現住所<span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--column">
@@ -435,7 +435,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">写真アップロード<br class="tb2-br">（間取り写真）</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -466,7 +466,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">現住所の間取り</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -492,7 +492,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">お引越しされる人数</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -512,7 +512,7 @@
                     </div>
                 </div>
                 <div class="form__item adress__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">引越し先住所 <span class="asterisk">※</span></label>
                     </div>
                     <div class="form__area form__area--column">
@@ -610,7 +610,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">引越し先の間取り</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -668,7 +668,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">その他お荷物があれば<br class="tb2-br">ご入力ください</label>
                     </div>
                     <div class="form__area form__area--column">
@@ -704,7 +704,7 @@
                     </div>
                 </div>
                 <div class="form__item">
-                    <div class="form__label">
+                    <div class="form__label form__label--marginTop">
                         <label for="name">ご質問・ご要望</label>
                     </div>
                     <div class="form__area form__area--column">
