アニメーション作成

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/variable.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/anime.css" />
     <link rel="stylesheet" href="assets/css/page.top.css" />
 </head>
 
@@ -192,8 +193,8 @@
         </section>
         <section class="news">
             <div class="bgPinkText__inner">
-                <p class="bgPinkText first">TAKAKURA MOVING CENTER</p>
-                <p class="bgPinkText second">TAKAKURA MOVING CENTER</p>
+                <p class="bgPinkText first slide-in slide-inLeft">TAKAKURA MOVING CENTER</p>
+                <p class="bgPinkText second slide-in slide-inRight">TAKAKURA MOVING CENTER</p>
             </div>
             <div class="news__inner">
                 <div class="news__inner--tv">
@@ -231,7 +232,7 @@
             </div>
             <div class="about__charaInner">
                 <img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" />
-                <img class="about__chara--surround1" src="./assets/images/top/about/img-about_surround1.svg" alt="" />
+                <div class="about__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                 <img class="about__chara--surround2" src="./assets/images/top/about/img-about_surround2.svg" alt="" />
                 <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                 <img class="about__pinkCircle second" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
@@ -645,6 +646,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/anime.js"></script>
 </body>
 
 </html>
